[gd_scene load_steps=2 format=3 uid="uid://c5rre8utxkv8r"]

[ext_resource type="Script" path="res://SQL.gd" id="1_6m7sv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6m7sv")

[node name="CreateTable" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 63.0
offset_right = 128.0
offset_bottom = 96.0
text = "Create Table"

[node name="InsertData" type="Button" parent="."]
layout_mode = 0
offset_top = 108.0
offset_right = 126.0
offset_bottom = 141.0
text = "Insert Data"

[node name="SelectData" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 154.0
offset_right = 127.0
offset_bottom = 187.0
text = "Select Data"

[node name="UpdateData" type="Button" parent="."]
layout_mode = 0
offset_top = 202.0
offset_right = 126.0
offset_bottom = 235.0
text = "Update Data"

[node name="DeleteData" type="Button" parent="."]
layout_mode = 0
offset_top = 249.0
offset_right = 126.0
offset_bottom = 282.0
text = "Delete Data"

[node name="CustomSelect" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 299.0
offset_right = 127.0
offset_bottom = 332.0
text = "Custom Select"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Name" type="TextEdit" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171
anchor_top = 0.051
anchor_right = 0.171
anchor_bottom = 0.051
offset_left = 212.16
offset_top = 80.827
offset_right = 324.16
offset_bottom = 111.827
placeholder_text = "Name"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Score" type="TextEdit" parent="Label2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171
anchor_top = 0.051
anchor_right = 0.171
anchor_bottom = 0.051
offset_left = 211.16
offset_top = 146.827
offset_right = 323.16
offset_bottom = 177.827
placeholder_text = "Score"

[connection signal="button_down" from="CreateTable" to="." method="_on_create_table_button_down"]
[connection signal="button_down" from="InsertData" to="." method="_on_insert_data_button_down"]
[connection signal="button_down" from="SelectData" to="." method="_on_select_data_button_down"]
[connection signal="button_down" from="UpdateData" to="." method="_on_update_data_button_down"]
[connection signal="button_down" from="DeleteData" to="." method="_on_delete_data_button_down"]
[connection signal="button_down" from="CustomSelect" to="." method="_on_custom_select_button_down"]
